--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "name": "Switch the first letter of words!",
     "icons": [
         {
-            "src": "launcher-icon-3x.png",
-            "sizes": "144x144",
+            "src": "icon192.png",
+            "sizes": "192x192",
             "type": "image/png"
         }
     ],
